--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>vai ser uma imagem aqui</h1>
+        <img src="7r3elvxk.png" alt="Logo dos Nórdicos Antigos" width="12%">
         <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+            <li class="cabeçalho-item">Logar</li>
+            <li class="cabeçalho-item">Criar Conta</li>
         </ul>
     </header>
 </body>
